🔨 Implemented vehicles registered in province
